--- a/assetManagement/assetManagement/pom.xml
+++ b/assetManagement/assetManagement/pom.xml
@@ -96,11 +96,13 @@
 			<artifactId>plexus-archiver</artifactId>
 			<version>1.0-alpha-7</version>
 		</dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.11.5</version>
-        </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version> <!-- Replace with the appropriate version -->
+		</dependency>
+
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
