--- a/assetManagement/assetManagement/pom.xml
+++ b/assetManagement/assetManagement/pom.xml
@@ -102,6 +102,14 @@
 			<version>8.0.27</version> <!-- Replace with the appropriate version -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version>
+		</dependency>
+
+
+
 
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
